[package]
description = "The LLVM compiler-rt builtins source, conveniently packaged as a Rust crate."
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
name = "compiler-rt-builtins"
repository = "https://github.com/trevyn/compiler-rt-builtins"
version = "0.1.0"

[build-dependencies]
cc = "1"
